remove show window on doubleclick

--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -47,6 +47,7 @@
                                 <dxe:CheckEdit EditValue="{Binding CurrentProject.IsSimpleProject}" />
                             </dxlc:LayoutItem>
                             <Button Content="Add project" Command="{Binding AddNewProjectCommand}" Height="20"/>
+                            <Button Content="Open acitons" Command="{Binding OpenEditProjectCommand}" Height="20"/>
                             <Button Content="SaveChanges"  Height="20" Command="{Binding SaveChangesCommand}"/>
                         </dxlc:LayoutGroup>
                         <dxlc:LayoutGroup Orientation="Vertical" x:Name="ActionGroup" IsEnabled="{Binding SelectedProject,Converter={StaticResource objToBoolConverter}}">
