--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -5,6 +5,7 @@
         xmlns:dxlc="http://schemas.devexpress.com/winfx/2008/xaml/layoutcontrol"
         xmlns:dxmvvm="http://schemas.devexpress.com/winfx/2008/xaml/mvvm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:dxb="http://schemas.devexpress.com/winfx/2008/xaml/bars"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:local="clr-namespace:ListOfDeal"
         Title="MainWindow" Height="700" Width="1200"
@@ -15,7 +16,7 @@
         <dxmvvm:ObjectToBooleanConverter x:Key="objToBoolConverter"/>
     </Window.Resources>
     <Grid>
-        <dx:DXTabControl>
+        <dx:DXTabControl SelectedIndex="{Binding SelectedTabIndex}">
 
             <dx:DXTabItem Header="Enter new project">
                 <dxlc:LayoutGroup Orientation="Vertical">
@@ -144,6 +145,17 @@
                                 </dxg:GridColumn.EditSettings>
                             </dxg:GridColumn>
                         </dxg:GridControl.Columns>
+                        <dxg:GridControl.View>
+                            <dxg:TableView>
+                                <dxg:TableView.RowCellMenuCustomizations>
+                                    <dxb:BarButtonItem Content="Go to project"
+                                                       Command="{Binding View.DataContext.GoToParentProjectCommand}"
+                                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
+                                                       >
+                                        </dxb:BarButtonItem>
+                                </dxg:TableView.RowCellMenuCustomizations>
+                            </dxg:TableView>
+                        </dxg:GridControl.View>
                     </dxg:GridControl>
                 </Grid>
             </dx:DXTabItem>
