--- a/ListOfDeal/MainWindow.xaml
+++ b/ListOfDeal/MainWindow.xaml
@@ -229,6 +229,17 @@
                         </dxg:GridColumn>
                         <dxg:GridColumn FieldName="ProjectName" />
                     </dxg:GridControl.Columns>
+                    <dxg:GridControl.View>
+                        <dxg:TableView>
+                            <dxg:TableView.RowCellMenuCustomizations>
+                                <dxb:BarButtonItem Content="Go to project"
+                                                       Command="{Binding View.DataContext.GoToParentProjectCommand}"
+                                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
+                                                       >
+                                </dxb:BarButtonItem>
+                            </dxg:TableView.RowCellMenuCustomizations>
+                        </dxg:TableView>
+                    </dxg:GridControl.View>
                 </dxg:GridControl>
             </dx:DXTabItem>
             <dx:DXTabItem Header="Delegated">
@@ -275,6 +286,17 @@
                         </dxg:GridColumn>
                         <dxg:GridColumn FieldName="ProjectName" />
                     </dxg:GridControl.Columns>
+                    <dxg:GridControl.View>
+                        <dxg:TableView>
+                            <dxg:TableView.RowCellMenuCustomizations>
+                                <dxb:BarButtonItem Content="Go to project"
+                                                       Command="{Binding View.DataContext.GoToParentProjectCommand}"
+                                                       CommandParameter="{Binding Path=View.Grid.CurrentItem}"
+                                                       >
+                                </dxb:BarButtonItem>
+                            </dxg:TableView.RowCellMenuCustomizations>
+                        </dxg:TableView>
+                    </dxg:GridControl.View>
                 </dxg:GridControl>
             </dx:DXTabItem>
         </dx:DXTabControl>
